# skilltest-buienradar

./: erd.puml  pyproject.toml
data/: data_buienradar.json
scripts/: Q1_repl.py  Q2_repl.py  Q3_repl.py  Q5_repl.py  Q6_repl.py  Q7_repl.py  Q8_repl.py  Q9B_repl.py
skilltest/: data_analysis.py  data_visualisation.py  database.py  datamodels.py  main.py
