[project]
name = "skilltest-buienradar"
version = "0.1.0"
description = ""
authors = [
    {name = "Chris de Rijcke",email = "chris_de_rijcke@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pydantic (>=2.13.4,<3.0.0)",
    "sqlmodel (>=0.0.38,<0.0.39)",
    "matplotlib (>=3.10.9,<4.0.0)",
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
